--- a/todo
+++ b/todo
@@ -30,6 +30,9 @@
 4. Redo in the right order
 
 TODO:
+ - Names show up and users are notified if anyone leaves
+ - Custom icon for people's names?
+ - Fix scale issue
 
 Synchronization:
  - Changes to units / adding voices?
