--- a/todo
+++ b/todo
@@ -70,10 +70,12 @@
 6/12
 1. ability to add units
 
+6/13
+1. this std::variant thing worked?!?
+
 TODO:
- - adding instruments and units
-   - first, adding / deleting units with fixed pool of instrs (see drawpile layers maybe?)
-   - then, adding / deleting instrs
+ - get delete units btn to work
+ - adding / deleting instrs
  - Unit view, at least for drums
    - how many views do you want? the fewer, the easier it is to be 'present'
      with others.
