--- a/todo
+++ b/todo
@@ -75,6 +75,7 @@
 
 TODO:
  - get delete units btn to work
+ - confirmation box for delete
  - adding / deleting instrs
  - Unit view, at least for drums
    - how many views do you want? the fewer, the easier it is to be 'present'
