--- a/todo
+++ b/todo
@@ -96,12 +96,12 @@
 
 6/17
 1. fix Save As in windows (save to original file is still broken)
+2. fix save to original file in windows. I think?
+3. tested 'cross platform' by running in wine simultaneously with linux lol
 
 TODO:
- - placing notes is choppy in windows. why??? it's because of note preview. how to fix? wasapi?
- - fix save-to-original-file. I think the problem is that the read handle is still open.
-   - Will probably have to just read it all into memory at beginning since if you save on linux and a new client joins it might screw up.
- - test cross-platform.
+ - test cross-platform for real.
+ - placing notes is choppy in windows because of note preview lag. how to fix? wasapi?
 
  - Unit view, at least for drums
    - how many views do you want? the fewer, the easier it is to be 'present'
