running thank-you list

--- a/todo
+++ b/todo
@@ -259,3 +259,14 @@ Low priority:
 Just general format? improvements:
  - A kind of meta instrument that changes depending on parameter or pitch
 
+Running thank-you list:
+1. Friends and family for supporting this!
+2. jaxcheese, neozoid, steedfarmer for testing out with me, making tunes
+   together, and giving great feedback!
+3. steedfarmer for helping me hunt down this nasty networking bug!
+4. arcofdream for helping conceptualize the UI, giving feedback, and testing it
+   out!
+5. arcofdream, nanoplink, easynam for general programming, UX discussion and
+   consulting!
+6. jade for testing, finding UI bugs, and providing valuable suggestions!
+6. everyone in the pxtone discord servers!
