--- a/todo
+++ b/todo
@@ -164,6 +164,8 @@ fill architecture could work well.
   - Accurate note preview: proper state at time of note w/ params of note.
   - Can still factor out more depending on what kind of preview to isolate.
     Current setup just makes it easy to configure a unit and then just play.
+6. A tricky thing to get smooth playhead. Also renders better when there's a
+   bigger buffer I think.
 
 Todo by priority
 ----------------
